@@ -25,13 +25,14 @@ extern MolochConfig_t        config;
 HASH_VAR(d_, fieldsByDb, MolochFieldInfo_t, 307);
 HASH_VAR(e_, fieldsByExp, MolochFieldInfo_t, 307);
 
-#define MOLOCH_FIELD_SPECIAL_STOP_SPI   -2
-#define MOLOCH_FIELD_SPECIAL_STOP_PCAP  -3
-#define MOLOCH_FIELD_SPECIAL_MIN_SAVE   -4
-#define MOLOCH_FIELD_SPECIAL_DROP_SRC   -5
-#define MOLOCH_FIELD_SPECIAL_DROP_DST   -6
-#define MOLOCH_FIELD_SPECIAL_STOP_YARA  -7
-#define MOLOCH_FIELD_SPECIAL_MIN        -7
+#define MOLOCH_FIELD_SPECIAL_STOP_SPI      -2
+#define MOLOCH_FIELD_SPECIAL_STOP_PCAP     -3
+#define MOLOCH_FIELD_SPECIAL_MIN_SAVE      -4
+#define MOLOCH_FIELD_SPECIAL_DROP_SRC      -5
+#define MOLOCH_FIELD_SPECIAL_DROP_DST      -6
+#define MOLOCH_FIELD_SPECIAL_DROP_SESSION  -7
+#define MOLOCH_FIELD_SPECIAL_STOP_YARA     -8
+#define MOLOCH_FIELD_SPECIAL_MIN           -8
 
 LOCAL va_list empty_va_list;
 
@@ -1374,6 +1375,9 @@ void moloch_field_ops_run(MolochSession_t *session, MolochFieldOps_t *ops)
             case MOLOCH_FIELD_SPECIAL_DROP_DST:
                 moloch_packet_drophash_add(session, 1, op->strLenOrInt);
                 break;
+            case MOLOCH_FIELD_SPECIAL_DROP_SESSION:
+                moloch_packet_drophash_add(session, -1, op->strLenOrInt);
+                break;
             case MOLOCH_FIELD_SPECIAL_STOP_YARA:
                 session->stopYara = 1;
                 break;
@@ -1480,6 +1484,7 @@ void moloch_field_ops_add(MolochFieldOps_t *ops, int fieldPos, char *value, int 
         case MOLOCH_FIELD_SPECIAL_MIN_SAVE:
         case MOLOCH_FIELD_SPECIAL_DROP_SRC:
         case MOLOCH_FIELD_SPECIAL_DROP_DST:
+        case MOLOCH_FIELD_SPECIAL_DROP_SESSION:
         case MOLOCH_FIELD_SPECIAL_STOP_YARA:
             op->strLenOrInt = atoi(value);
             op->str = 0;
@@ -1566,6 +1571,7 @@ void moloch_field_init()
     moloch_field_by_exp_add_special("_minPacketsBeforeSavingSPI", MOLOCH_FIELD_SPECIAL_MIN_SAVE);
     moloch_field_by_exp_add_special("_dropBySrc", MOLOCH_FIELD_SPECIAL_DROP_SRC);
     moloch_field_by_exp_add_special("_dropByDst", MOLOCH_FIELD_SPECIAL_DROP_DST);
+    moloch_field_by_exp_add_special("_dropBySession", MOLOCH_FIELD_SPECIAL_DROP_SESSION);
     moloch_field_by_exp_add_special("_dontCheckYara", MOLOCH_FIELD_SPECIAL_STOP_YARA);
 
     moloch_field_by_exp_add_special_type("ip.src", MOLOCH_FIELD_EXSPECIAL_SRC_IP, MOLOCH_FIELD_TYPE_IP);
